--- a/style.css
+++ b/style.css
@@ -222,8 +222,9 @@ h1{
   font-family: 'Lato', Arial, sans-serif;
   position: relative;
   display: inline-block;
+  justify-content: space-between;
   overflow: hidden;
-  margin-left: 20px;
+  margin-left: 150px;
   margin-top: 20px;
   min-width: 250px;
   max-width: 310px;
